tests/NormalTests/paczka1/small_fuzzy/61926935.err
Error in line 4: UXfyvIV6 S178 47,0
Error in line 5: UXfyvIV6 A860 55,8
